fix: [PD-485] recent search text overflow is hidden

--- a/src/component/SearchOverlay/SearchOverlay.style.scss
+++ b/src/component/SearchOverlay/SearchOverlay.style.scss
@@ -453,11 +453,11 @@ div.SearchOverlay.Overlay {
         background-color: #F0F0F0;
         opacity: 1;
         text-transform: capitalize;
-        width : 515px;
+        max-width : 515px;
         white-space: nowrap;
         overflow: hidden;
-        display: inline-block;
         text-overflow: ellipsis;
+        justify-content:initial;
     }
 
     &-Item {
